feat: implement booking management system including model, repository, service, and controller layers